fix(angular/radio-button): not checked on first click if partially visible (#1172)
Currently, the native `input` inside the radio button is collapsed down to 1px by 1px
and moved to the bottom of the element which causes browsers to scroll the window
down, rather than change the value, on the first click when the input is partially
hidden. These changes fix the issue by having the input cover the entire button and
hiding it with `opacity`. From my testing, using `opacity` versus `cdk-visually-hidden`
doesn't make a difference for screen readers.

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -1741,6 +1741,17 @@ textarea {
   }
 }
 
+.sbb-radio-input {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  cursor: inherit;
+}
+
 // ----------------------------------------------------------------------------------------------------
 // SBB Checkbox Panel & Radio Button Panel
 // ----------------------------------------------------------------------------------------------------
